--- a/app/src/main/res/layout/detail_action_layout.xml
+++ b/app/src/main/res/layout/detail_action_layout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/user_bg"
-    tools:layout_editor_absoluteY="25dp">
+    tools:layout_editor_absoluteY="25dp"
+    android:fitsSystemWindows="true">
 
     <TextView
         android:id="@+id/textView4"
@@ -298,13 +299,40 @@
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="48dp"
         android:layout_marginTop="10dp"
-        android:text=" 查看已参加成员 "
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="15dp"
         android:background="@drawable/bg_btn"
+        android:text=" 查看已参加成员 "
         android:textColor="@color/yupColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintLeft_toLeftOf="@id/select_grid_view"
+        app:layout_constraintTop_toBottomOf="@+id/textView9"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <Button
+        android:id="@+id/btnUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/bg_btn"
+        android:text="修 改"
+        android:textColor="@color/yupColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/button"
+        app:layout_constraintStart_toEndOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
+    <Button
+        android:id="@+id/btnDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="20dp"
+        android:background="@drawable/bg_btn"
+        android:text="删 除"
+        android:textColor="@color/yupColor"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@id/btnUpdate"
+        app:layout_constraintTop_toBottomOf="@+id/textView9" />
 </android.support.constraint.ConstraintLayout>
